--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Realcstate-backend",
+    "name": "Land-id",
     "version": "1",
     "type": "module",
     "description": "backend for real state website",
@@ -9,7 +9,7 @@
     "license": "MIT",
     "scripts": {
         "start": "node index.js",
-        "dev": "npx nodemon index.js"
+        "dev": "nodemon index.js"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.4",
         "express": "^4.18.2",
+        "express-validator": "^7.0.1",
         "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.3",
