--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 CONNECTION_URL=mongodb+srv://salmansarwarrdev:1ka2ka3ka4@cluster0.rkiit5y.mongodb.net/
+MJ_APIKEY_PUBLIC=f3d594087b423109acd876a79b522b01
+MJ_APIKEY_PRIVATE=e1e360cc8fa4dbccbf4c0c425016efa0
