--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.3",
         "multer": "^1.4.5-lts.1",
+        "node-mailjet": "^6.0.5",
         "nodemailer": "^6.9.10",
         "nodemon": "^3.0.3",
         "path": "^0.12.7",
