--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "aws-sdk": "^2.1575.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
@@ -22,6 +23,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.3",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "node-mailjet": "^6.0.5",
         "nodemailer": "^6.9.10",
         "nodemon": "^3.0.3",
